hot fix log error

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 output/
 notebooks/
 
+
 # Store files
 .DS_Store
 
@@ -146,3 +147,4 @@ cython_debug/
 loader_venv/
 .vscode/
 src/loader/secrets.yaml
+.loader-anaylsis/
