--- a/src/loader/endpoints.yaml
+++ b/src/loader/endpoints.yaml
@@ -1,15 +1,24 @@
 - endpoint: br/cities/embaixadores
   python_file: get_embaixadores
-  update_frequency_minutes: 15
+  update_frequency_minutes: 10
 
 - endpoint: br/cities/cnes
   python_file: get_health
-  update_frequency_minutes: 15
+  update_frequency_minutes: 10
 
 - endpoint: br/cities/simulacovid/main
   python_file: get_simulacovid_main
-  update_frequency_minutes: 15
+  update_frequency_minutes: 10
 
 - endpoint: br/cities/cases/full
   python_file: get_cases
-  update_frequency_minutes: 15
+  update_frequency_minutes: 10
+
+- endpoint: br/states/rt
+  python_file: get_states_rt
+  update_frequency_minutes: 10
+
+- endpoint: br/cities/rt
+  python_file: get_cities_rt
+  update_frequency_minutes: 360
+
