--- a/src/loader/endpoints.yaml
+++ b/src/loader/endpoints.yaml
@@ -36,3 +36,7 @@
   python_file: get_owid_heatmap
   update_frequency_minutes: 360
 
+- endpoint: cities/farolcovid/main
+  python_file: get_farolcovid_main
+  update_frequency_minutes: 720
+
