--- a/src/loader/endpoints.yaml
+++ b/src/loader/endpoints.yaml
@@ -1,42 +1,52 @@
 - endpoint: br/cities/embaixadores
   python_file: get_embaixadores
   update_frequency_minutes: 10
+  skip: True
 
 - endpoint: br/cities/cnes
   python_file: get_health
   update_frequency_minutes: 10
+  skip: True
 
 - endpoint: br/cities/simulacovid/main
   python_file: get_simulacovid_main
   update_frequency_minutes: 10
+  skip: True
 
 - endpoint: br/cities/cases/full
   python_file: get_cases
   update_frequency_minutes: 10
+  skip: True
 
 - endpoint: br/states/rt
   python_file: get_states_rt
   update_frequency_minutes: 10
+  skip: True
 
 - endpoint: br/cities/rt
   python_file: get_cities_rt
   update_frequency_minutes: 360
+  skip: True
 
 - endpoint: secret
   secret_path: [inloco, states]
   python_file: get_inloco_states
   update_frequency_minutes: 360
+  skip: True
 
 - endpoint: secret
   secret_path: [inloco, cities]
   python_file: get_inloco_cities
   update_frequency_minutes: 360
+  skip: True
 
 - endpoint: world/owid/heatmap
   python_file: get_owid_heatmap
   update_frequency_minutes: 360
+  skip: False
 
-- endpoint: cities/farolcovid/main
+- endpoint: br/cities/farolcovid/main
   python_file: get_farolcovid_main
   update_frequency_minutes: 720
+  skip: False
 
