minor fix: add sources to health data on farolmain

--- a/src/loader/endpoints/aux/farol_config.yaml
+++ b/src/loader/endpoints/aux/farol_config.yaml
@@ -5,7 +5,12 @@ simulacovid:
         "state_id",
         "state_name",
         "population",
+        "health_system_region",
+        "last_updated_number_beds",
+        "author_number_beds",
         "number_beds",
+        "last_updated_number_ventilators",
+        "author_number_ventilators",
         "number_ventilators",
         "confirmed_cases",
         "active_cases",
