--- a/src/loader/endpoints.yaml
+++ b/src/loader/endpoints.yaml
@@ -55,12 +55,12 @@
   update_frequency_minutes: 360
   skip: False
 
-- endpoint: br/CNAE/sectors
-  python_file: get_CNAE_sectors
+- endpoint: br/cnae/sectors
+  python_file: get_cnae_sectors
   update_frequency_minutes: 720
   skip: False
 
-- endpoint: br/states/reopening
-  python_file: get_states_reopening
+- endpoint: br/states/safereopen/main
+  python_file: get_states_safereopen_main
   update_frequency_minutes: 720
   skip: False
