--- a/src/loader/endpoints.yaml
+++ b/src/loader/endpoints.yaml
@@ -1,66 +1,49 @@
-- endpoint: br/cities/embaixadores
-  python_file: get_embaixadores
-  update_frequency_minutes: 360
-  skip: False
-
 - endpoint: br/cities/cnes
   python_file: get_health
-  update_frequency_minutes: 720
+  skip: False
+
+- endpoint: br/cnae/sectors
+  python_file: get_sectors_cnae
+  skip: False
+
+- endpoint: br/states/safereopen/main
+  python_file: get_states_safereopen_main
   skip: False
 
 - endpoint: br/cities/cases/full
   python_file: get_cases
-  update_frequency_minutes: 360
   skip: False
 
 - endpoint: br/cities/simulacovid/main
   python_file: get_simulacovid_main
-  update_frequency_minutes: 360
   skip: False
 
 - endpoint: br/states/rt
   python_file: get_states_rt
-  update_frequency_minutes: 360
   skip: False
 
 - endpoint: world/owid/heatmap
   python_file: get_owid_heatmap
-  update_frequency_minutes: 360
   skip: False
 
 - endpoint: secret
   secret_path: [inloco, states]
   python_file: get_inloco_states
-  update_frequency_minutes: 360
   skip: False
 
 - endpoint: secret
   secret_path: [inloco, cities]
   python_file: get_inloco_cities
-  update_frequency_minutes: 360
   skip: False
 
 - endpoint: br/cities/rt
   python_file: get_cities_rt
-  update_frequency_minutes: 360
   skip: False
 
 - endpoint: br/cities/farolcovid/main
   python_file: get_cities_farolcovid_main
-  update_frequency_minutes: 360
   skip: False
 
 - endpoint: br/states/farolcovid/main
   python_file: get_states_farolcovid_main
-  update_frequency_minutes: 360
-  skip: False
-
-- endpoint: br/cnae/sectors
-  python_file: get_cnae_sectors
-  update_frequency_minutes: 720
-  skip: False
-
-- endpoint: br/states/safereopen/main
-  python_file: get_states_safereopen_main
-  update_frequency_minutes: 720
   skip: False
