--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ loader_venv/
 src/loader/secrets
 src/loader/secrets.yaml
 src/loader/token.pickle
+.env
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
