--- a/src/loader/endpoints.yaml
+++ b/src/loader/endpoints.yaml
@@ -1,3 +1,7 @@
+- endpoint: br/places/ids
+  python_file: get_places_id
+  skip: False
+
 - endpoint: br/cities/cnes
   python_file: get_health
   skip: False
@@ -22,6 +26,10 @@
   python_file: get_states_rt
   skip: False
 
+- endpoint: br/health_region/rt
+  python_file: get_health_region_rt
+  skip: False
+
 - endpoint: world/owid/heatmap
   python_file: get_owid_heatmap
   skip: False
@@ -42,6 +50,10 @@
 
 - endpoint: br/cities/farolcovid/main
   python_file: get_cities_farolcovid_main
+  skip: False
+
+- endpoint: br/health_region/farolcovid/main
+  python_file: get_health_region_farolcovid_main
   skip: False
 
 - endpoint: br/states/farolcovid/main
