--- a/src/loader/endpoints.yaml
+++ b/src/loader/endpoints.yaml
@@ -20,7 +20,7 @@
 
 - endpoint: br/cities/cases/full
   python_file: get_cases
-  skip: True
+  skip: False
 
 - endpoint: br/cities/simulacovid/main
   python_file: get_simulacovid_main
