finish new columns

--- a/src/loader/endpoints.yaml
+++ b/src/loader/endpoints.yaml
@@ -64,6 +64,6 @@
   python_file: get_states_farolcovid_main
   skip: True
 
-- endpoint: TEST
-  python_file: test
-  skip: False
+#- endpoint: TEST
+#  python_file: test
+#  skip: False
