add parameters endpoints

--- a/src/loader/endpoints.yaml
+++ b/src/loader/endpoints.yaml
@@ -2,6 +2,14 @@
   python_file: get_places_id
   skip: False
 
+- endpoint: br/health_region/parameters
+  python_file: get_health_region_parameters
+  skip: False
+
+- endpoint: br/states/parameters
+  python_file: get_states_parameters
+  skip: False
+
 - endpoint: br/cities/cnes
   python_file: get_health
   skip: False
