--- a/src/loader/endpoints.yaml
+++ b/src/loader/endpoints.yaml
@@ -16,7 +16,7 @@
 
 - endpoint: br/cities/cnes
   python_file: get_cnes
-  skip: False
+  skip: True
 
 - endpoint: br/cnae/sectors
   python_file: get_sectors_cnae
