--- a/src/loader/endpoints.yaml
+++ b/src/loader/endpoints.yaml
@@ -95,12 +95,12 @@
 
 - endpoint: br/cities/vacina
   python_file: get_cities_vacina
-  skip: True
+  skip: False
 
 - endpoint: br/health_region/vacina
   python_file: get_region_vacina
-  skip: True
+  skip: False
 
 - endpoint: br/states/vacina
   python_file: get_states_vacina
-  skip: True
+  skip: False
