--- a/src/loader/endpoints.yaml
+++ b/src/loader/endpoints.yaml
@@ -1,97 +1,97 @@
 - endpoint: br/places/ids
   python_file: get_places_id
-  skip: True
+  skip: False
 
 - endpoint: br/health_region/parameters
   python_file: get_health_region_parameters
-  skip: True
+  skip: False
 
 - endpoint: br/cities/parameters
   python_file: get_cities_parameters
-  skip: True
+  skip: False
 
 - endpoint: br/states/parameters
   python_file: get_states_parameters
-  skip: True
+  skip: False
 
 - endpoint: br/cities/cnes
   python_file: get_cnes
-  skip: True
+  skip: False
 
 - endpoint: br/cnae/sectors
   python_file: get_sectors_cnae
-  skip: True
+  skip: False
 
 - endpoint: br/states/safereopen/main
   python_file: get_states_safereopen_main
-  skip: True
+  skip: False
 
 - endpoint: br/health_region/safereopen/main
   python_file: get_health_region_safereopen_main
-  skip: True
+  skip: False
 
 - endpoint: br/cities/cases/full
   python_file: get_cities_cases
-  skip: True
+  skip: False
 
 - endpoint: br/health_region/cases/full
   python_file: get_health_region_cases
-  skip: True
+  skip: False
 
 - endpoint: br/states/cases/full
   python_file: get_states_cases
-  skip: True
+  skip: False
 
 - endpoint: world/owid/heatmap
   python_file: get_owid_heatmap
-  skip: True
+  skip: False
 
 - endpoint: INLOCO_STATES_ROUTE
   secret_path: [inloco, states]
   python_file: get_inloco_states
-  skip: True
+  skip: False
 
 - endpoint: INLOCO_CITIES_ROUTE
   secret_path: [inloco, cities]
   python_file: get_inloco_cities
-  skip: True
+  skip: False
   
 - endpoint: INLOCO_RS_CITIES_ROUTE
   secret_path: [inloco, rs_cities]
   python_file: get_inloco_rs_cities
-  skip: True
+  skip: False
 
 - endpoint: br/states/rt
   python_file: get_states_rt
-  skip: True
+  skip: False
 
 - endpoint: br/health_region/rt
   python_file: get_health_region_rt
-  skip: True
+  skip: False
 
 - endpoint: br/cities/rt
   python_file: get_cities_rt
-  skip: True
+  skip: False
 
 - endpoint: br/health_region/farolcovid/main
   python_file: get_health_region_farolcovid_main
-  skip: True
+  skip: False
 
 - endpoint: br/cities/farolcovid/main
   python_file: get_cities_farolcovid_main
-  skip: True
+  skip: False
 
 - endpoint: br/states/farolcovid/main
   python_file: get_states_farolcovid_main
-  skip: True
+  skip: False
 
 - endpoint: br/cities/safeschools/main
   python_file: get_cities_safeschools_main
-  skip: True
+  skip: False
 
 - endpoint: br/maps
   python_file: get_maps
-  skip: True
+  skip: False
 
 - endpoint: br/cities/vacina
   python_file: get_cities_vacina
@@ -99,8 +99,8 @@
 
 - endpoint: br/health_region/vacina
   python_file: get_region_vacina
-  skip: True
+  skip: False
 
 - endpoint: br/states/vacina
   python_file: get_states_vacina
-  skip: True
+  skip: False
