Adiciona ocupação de UTIs
Obtém os dados de ocupação hospitalar em UTIs do Painel COVID-19.

Além disso, refatora a consolidação de indicadores do FarolCovid, evitando importações circulares.

--- a/src/loader/endpoints.yaml
+++ b/src/loader/endpoints.yaml
@@ -73,6 +73,10 @@
   python_file: get_cities_rt
   skip: False
 
+- endpoint: br/states/beds_occupation
+  python_file: get_states_beds_occupation
+  skip: False
+
 - endpoint: br/health_region/farolcovid/main
   python_file: get_health_region_farolcovid_main
   skip: False
